<?xml version="1.0" encoding="utf-8"?>
<androidx.wear.widget.BoxInsetLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/box_inset_layout_padding"
    tools:context=".ChangePassActivity"
    tools:deviceIds="wear"
    tools:ignore="MissingClass">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/inner_frame_layout_padding">

        <TextView
            android:id="@+id/old_pass_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="13dp"
            android:text="@string/enter_old_password_text"
            app:layout_constraintBottom_toTopOf="@+id/TextPassword_Old"
            app:layout_constraintEnd_toEndOf="@+id/TextPassword_Old"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/TextPassword_Old"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <EditText
            android:id="@+id/TextPassword_Old"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:hint="@string/enter_old_password_text"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@+id/new_pass_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.09"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="Autofill" />

        <TextView
            android:id="@+id/new_pass_text"
            android:layout_width="134dp"
            android:layout_height="19dp"
            android:layout_marginTop="128dp"
            android:text="@string/enter_new_password_text"
            app:layout_constraintBottom_toTopOf="@+id/TextPassword_new"
            app:layout_constraintStart_toStartOf="@+id/TextPassword_new"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/TextPassword_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="152dp"
            android:ems="10"
            android:hint="@string/enter_new_password_text"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@+id/re_enter_new_pass_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.079"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.409" />

        <TextView
            android:id="@+id/re_enter_new_pass_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="242dp"
            android:layout_marginBottom="2dp"
            android:text="@string/re_enter_the_same_password_text"
            app:layout_constraintBottom_toTopOf="@+id/TextPassword_new_again"
            app:layout_constraintEnd_toEndOf="@+id/TextPassword_new_again"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/TextPassword_new_again"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.52" />

        <EditText
            android:id="@+id/TextPassword_new_again"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="263dp"
            android:ems="10"
            android:hint="@string/re_enter_the_same_password_text"
            android:inputType="textPassword"
            app:layout_constraintBottom_toTopOf="@+id/submit_button"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.079"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.45" />

        <Button
            android:id="@+id/submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit_text"
            android:textColor="@color/white_on_orange"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.049"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.wear.widget.BoxInsetLayout>