<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <Button
        android:id="@+id/change_pass"
        android:layout_width="185dp"
        android:layout_height="51dp"
        android:layout_marginTop="58dp"
        android:text="change password"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="7dp" />

    <Switch
        android:id="@+id/allow_notification"
        android:layout_width="391dp"
        android:layout_height="54dp"
        android:layout_marginTop="146dp"
        android:text="Notify when activity in group chat"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="7dp" />

    <Button
        android:id="@+id/delete_account"
        android:layout_width="193dp"
        android:layout_height="48dp"
        android:layout_marginTop="344dp"
        android:text="Delete account"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="7dp" />

</androidx.constraintlayout.widget.ConstraintLayout>