...
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="title_activity_profile" translatable="false">ProfileActivity</string>
    <string name="sign_in_text">Log In/Sign Up</string>
    <string name="sign_out_text">Sign Out</string>
    <string name="main_screen_text">MAIN SCREEN</string>
    <string name="profile_text">Profile</string>
    <string name="settings_text">Settings</string>
    <string name="logout_text">Logout</string>
    <string name="change_language_text">Change Language</string>

    <string name="all_post_section_text">All Post Section</string>
    <string name="chat_section_text">Chat Section</string>
    <string name="saved_text">Saved</string>
...
    <string name="no_text">No</string>
    <string name="take_picture">Take a picture</string>
    <string name="add_description">Add your profile description here</string>
    <string name="edit_post_text">Edit Post</string>
    <string name="ending_date_text">ending date</string>
    <string name="delete_acc_question">Are you sure you want to delete your account?</string>
    <string name="ok_text">OK</string>
    <string name="cancel_text">Cancel</string>
    <string name="error_text">Error</string>
    <string name="success_text">Success</string>
    <string name="enter_old_pwd_text">Please enter the old password</string>
    <string name="enter_new_pwd_text">Please enter the new password</string>
    <string name="reenter_pwd_text">Please re-enter the new password</string>
...
