...
                android:ems="10"
                android:hint="@string/title"
                android:inputType="textPersonName"
                android:textSize="20sp" />

            <Button
                android:id="@+id/delete_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/delete"
                android:textColor="@color/white_on_orange" />
        </RelativeLayout>
...
